# ldjam

./: .gitignore  README.md
ld55_summoning/: Cargo.toml  README.txt
ld55_summoning/assets/: .cardfish_cards.png-autosave.kra  hexagon.glb  hexagon.gltf  ring.png~
ld55_summoning/src/: gamestate.rs  main.rs  main.rs.orig  map.rs  summongame.rs  titlescreen.rs
ld55_summoning/srcart/: SummonerCards.IMP  summon_art.blend
ld57_depths/: Cargo.toml  web_build.sh
ld57_depths/ld57-webapp/: .gitignore  package.json
ld57_depths/ld57-webapp/public/: ld57assets
ld57_depths/ld57-webapp/src/: App.css  App.tsx  main.tsx
ld57_depths/ld57assets/: demo.gltf  depthfish_proto.glb  simpleworld.glb
ld57_depths/src/: main.rs
ld57_depths/srcart/: lake.png~
templates/: README.md
templates/basecode_bevy_rs/: Cargo.toml  web_build.bat
templates/basecode_bevy_rs/src/: main.rs
