[package]
name = "ld55_summoning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = "0.13"
rand = "0.8.5"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"